webpack config setup

--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "Chrome extension in React",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack --watch --progress --config webpack.config.js"
   },
   "author": "Alexey Sytnikov",
   "license": "UNLICENSED",
   "devDependencies": {
     "react": "^18.3.1",
-    "typescript": "^5.5.4"
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.5.4",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
   }
 }
