--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "Alexey Sytnikov",
   "license": "UNLICENSED",
   "devDependencies": {
+    "copy-webpack-plugin": "^12.0.2",
+    "html-webpack-plugin": "^5.6.0",
     "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "ts-loader": "^9.5.1",
     "typescript": "^5.5.4",
     "webpack": "^5.93.0",
