--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   "author": "Alexey Sytnikov",
   "license": "UNLICENSED",
   "devDependencies": {
+    "@types/chrome": "^0.0.269",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.5.4",
     "webpack": "^5.93.0",
